feat: better jwt response and exception handling