@@ -1,11 +1,14 @@
 package nl.Groep13.OrderHandler.controller;
 
+import nl.Groep13.OrderHandler.DAO.UserDAO;
+import nl.Groep13.OrderHandler.model.User;
 import nl.Groep13.OrderHandler.record.LoginRequest;
 import nl.Groep13.OrderHandler.record.RegisterRequest;
 import nl.Groep13.OrderHandler.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.core.AuthenticationException;
+import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -13,6 +16,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.util.Collections;
 import java.util.Map;
+import java.util.Optional;
 
 @RestController
 @RequestMapping("/api/auth")
@@ -21,14 +25,15 @@ public class UserController {
     @Autowired private UserService userService;
     @Autowired private AuthenticationManager authManager;
 
-
     @PostMapping("/register")
     public Map<String, Object> registerHandler(@RequestBody RegisterRequest registerRequest){
         try {
             String token = userService.register(registerRequest);
-            return Collections.singletonMap("jwt-token", token);
+
+            if (token.contains("gebuiker bestaat al")) return Map.of("jwtToken", "", "message", "gebuiker bestaat al", "success", false);
+            return Map.of("jwtToken", token, "message", "Nieuwe gebruiker aangemaakt", "success", true);
         } catch (AuthenticationException e) {
-            return Collections.singletonMap("jwtToken", "");
+            return Map.of("jwtToken", "", "message", "Er is iets fout gegaan op de server, probeer het later opnieuw", "success", false);
         }
     }
 
